[gd_scene load_steps=10 format=3 uid="uid://busmmqyj42lv5"]

[ext_resource type="FontFile" uid="uid://b7jasa607pvfx" path="res://fonts/Louis George Cafe Bold.ttf" id="1"]
[ext_resource type="Script" path="res://src/main.gd" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_h2dux"]
font_size = 72

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_81m3s"]
font_size = 24
font_color = Color(1, 0.309804, 0.309804, 1)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)

[sub_resource type="Animation" id="3"]
resource_name = "ErrorFadeOut"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("C/V/ErrorText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qsyqi"]
_data = {
"ErrorFadeOut": SubResource("3")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")
color_incorrect = Color(0.258824, 0.258824, 0.301961, 1)
color_misplaced = Color(0.741176, 0.713726, 0.25098, 1)
color_correct = Color(0, 0.619608, 0.298039, 1)

[node name="C" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="C/V"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Gordle"
label_settings = SubResource("LabelSettings_h2dux")
horizontal_alignment = 1

[node name="LetterGrid" type="GridContainer" parent="C/V"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5

[node name="ErrorText" type="Label" parent="C/V"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.309804, 0.309804, 1)
theme_override_fonts/font = SubResource("2")
label_settings = SubResource("LabelSettings_81m3s")
horizontal_alignment = 1

[node name="V" type="VBoxContainer" parent="C/V"]
layout_mode = 2

[node name="HRow1" type="HBoxContainer" parent="C/V/V"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonQ" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "Q"

[node name="ButtonW" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "W"

[node name="ButtonE" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "E"

[node name="ButtonR" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "R"

[node name="ButtonT" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "T"

[node name="ButtonY" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "Y"

[node name="ButtonU" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "U"

[node name="ButtonI" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "I"

[node name="ButtonO" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "O"

[node name="ButtonP" type="Button" parent="C/V/V/HRow1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "P"

[node name="HRow2" type="HBoxContainer" parent="C/V/V"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonA" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "A"

[node name="ButtonS" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "S"

[node name="ButtonD" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "D"

[node name="ButtonF" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "F"

[node name="ButtonG" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "G"

[node name="ButtonH" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "H"

[node name="ButtonJ" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "J"

[node name="ButtonK" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "K"

[node name="ButtonL" type="Button" parent="C/V/V/HRow2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "L"

[node name="HRow3" type="HBoxContainer" parent="C/V/V"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonZ" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "Z"

[node name="ButtonX" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "X"

[node name="ButtonC" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "C"

[node name="ButtonV" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "V"

[node name="ButtonB" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "B"

[node name="ButtonN" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "N"

[node name="ButtonM" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "M"

[node name="ButtonBksp" type="Button" parent="C/V/V/HRow3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
text = "bksp"

[node name="GuessButton" type="Button" parent="C/V/V"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = SubResource("5")
text = "Guess"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 37.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "Menu"

[node name="ErrorFadeOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qsyqi")
}

[connection signal="pressed" from="C/V/V/HRow3/ButtonBksp" to="." method="_on_ButtonBksp_pressed"]
[connection signal="pressed" from="C/V/V/GuessButton" to="." method="_on_GuessButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
